--- a/client/src/style/css/LabelsInputs.css
+++ b/client/src/style/css/LabelsInputs.css
@@ -1,80 +1,85 @@
 @font-face {
-    font-family: "fonteLabel";
-    src: url(../font/SuisseIntlCond-Semibold-WebS.ttf);
+  font-family: fonteTitulo;
+  src: url(../font/SuisseIntlCond-Medium-WebS.woff);
+}
+
+@font-face {
+  font-family: fonteLabel;
+  src: url(../font/SuisseIntlCond-Semibold-WebS.woff);
+}
+@font-face {
+  font-family: fontenormal;
+  src: url(../font/SuisseIntlCond-Thin-WebS.woff);
 }
 
 .labelInput label {
-    position: relative;
-    font-family: fonteLabel;
-    font-weight: 550;
-    font-size: 4.5vw;
-    display: flex;
-    outline: none;
-    color: #3E3C39;
+  position: relative;
+  font-family: fonteLabel;
+  font-weight: 550;
+  font-size: 4.5vw;
+  display: flex;
+  outline: none;
+  color: #3e3c39;
 
-    left: 16%;
-    height: 3.5vh;
-    width: 70%;
-
+  left: 16%;
+  height: 3.5vh;
+  width: 70%;
 }
 
 .labelInput input {
-    position: relative;
-    width: 67%;
-    height: 4vh;
-    left: 12.5%;
-    padding-left: 2.5vh;
-    font-size: 3.5vw;
-    letter-spacing: 0.01em;
-    background: #FFFFFF;
-    outline: none;
+  position: relative;
+  width: 67%;
+  height: 4vh;
+  left: 12.5%;
+  padding-left: 2.5vh;
+  font-size: 3.5vw;
+  letter-spacing: 0.01em;
+  background: #ffffff;
+  outline: none;
 
-    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-    border-radius: 30px;
-    border: #FFFFFF;
-    color: #AEADAA;
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
+  border-radius: 30px;
+  border: #ffffff;
+  color: #aeadaa;
 }
 
-.labelInput .nameinput{
-    width: 12vh;
-    height: 4vh;
-    margin-left: 5vh;
-    padding-left: 2.5vh;
-    font-size: 12px;
-    display: flex;
-    letter-spacing: 0.01em;
-    background: #FFFFFF;
+.labelInput .nameinput {
+  width: 12vh;
+  height: 4vh;
+  margin-left: 5vh;
+  padding-left: 2.5vh;
+  font-size: 12px;
+  display: flex;
+  letter-spacing: 0.01em;
+  background: #ffffff;
 
-    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-    border-radius: 30px;
-    border: #ffffff;
-    
-    color: #AEADAA;
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
+  border-radius: 30px;
+  border: #ffffff;
+
+  color: #aeadaa;
 }
 
-
-.labelInput .lastnameinput{
-    width: 12vh;
-    height: 4vh;
-    padding-left: 2.5vh;
-    font-size: 12px;
-    display: flex;
-    font-size: 3.5vw;
-    letter-spacing: 0.01em;
-    background: #FFFFFF;
-    outline: none;
-    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-    border-radius: 30px;
-    border: #ffffff;
-    color: #AEADAA;
+.labelInput .lastnameinput {
+  width: 12vh;
+  height: 4vh;
+  padding-left: 2.5vh;
+  font-size: 12px;
+  display: flex;
+  font-size: 3.5vw;
+  letter-spacing: 0.01em;
+  background: #ffffff;
+  outline: none;
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
+  border-radius: 30px;
+  border: #ffffff;
+  color: #aeadaa;
 }
 
-.labelInput .name{
-    margin-left: 8vh;
+.labelInput .name {
+  margin-left: 8vh;
 }
 
-.labelInput .lastname{
-    margin-left: 4vh;
+.labelInput .lastname {
+  margin-left: 4vh;
 }
-
-
