--- a/client/src/style/css/Sidebar.css
+++ b/client/src/style/css/Sidebar.css
@@ -1,285 +1,288 @@
 @font-face {
-    font-family: "Suisse Int'l Condensed L";
-    src: url(../font/SuisseIntlCond-Semibold-WebS.woff);
+  font-family: fonteTitulo;
+  src: url(../font/SuisseIntlCond-Medium-WebS.woff);
+}
+
+@font-face {
+  font-family: fonteLabel;
+  src: url(../font/SuisseIntlCond-Semibold-WebS.woff);
+}
+@font-face {
+  font-family: fontenormal;
+  src: url(../font/SuisseIntlCond-Thin-WebS.woff);
 }
 
 /* btn press magic */
 #mydividas:active {
-    background-color: #fdaa44;
+  background-color: #fdaa44;
 }
 
 #dividastotais:active {
-    background-color: #fdaa44;
+  background-color: #fdaa44;
 }
 
 #criardivida:active {
-    background-color: #fdaa44;
+  background-color: #fdaa44;
 }
 
 #sbbg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0%;
+  top: 0px;
 
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0%;
-    top: 0px;
-
-    background: #FCC17A;
+  background: #fcc17a;
 }
 
 .App-logo {
-    position: relative;
-    width: 70%;
-    left: 5%;
-    top: 9%;
+  position: relative;
+  width: 70%;
+  left: 5%;
+  top: 9%;
 
-    /* sombra base */
-    filter: drop-shadow(4px 4px 25px rgba(0, 0, 0, 0.1));
+  /* sombra base */
+  filter: drop-shadow(4px 4px 25px rgba(0, 0, 0, 0.1));
 }
 
 /* criar divida btn*/
 #criardivida {
-    z-index: 2;
-    position: relative;
-    width: 100%;
-    height: 8%;
-    left: 0px;
-    top: 0%;
-    background-color: #FCC17A;
-    border-top: 1px solid #FFFFFF;
-    border-bottom: 1px solid #FFFFFF;
-    box-sizing: border-box;
+  z-index: 2;
+  position: relative;
+  width: 100%;
+  height: 8%;
+  left: 0px;
+  top: 0%;
+  background-color: #fcc17a;
+  border-top: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff;
+  box-sizing: border-box;
 }
 
 .App-logo-plus {
-    /* Criar Dívida Icone */
-    position: relative;
-    left: 7%;
-    top: 23%;
+  /* Criar Dívida Icone */
+  position: relative;
+  left: 7%;
+  top: 23%;
 
-    transform: matrix(1, 0, 0, -1, 0, 0);
+  transform: matrix(1, 0, 0, -1, 0, 0);
 }
 
 /* ------ minhas dividas btn --------*/
 #mydividasdiv {
-    position: relative;
-    width: 100%;
-    height: 8%;
-    left: 0px;
-    top: 0%;
-    transform-origin: top;
+  position: relative;
+  width: 100%;
+  height: 8%;
+  left: 0px;
+  top: 0%;
+  transform-origin: top;
 }
 
 #mydividas {
-    background-color: #FCC17A;
-    z-index: 2;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0%;
+  background-color: #fcc17a;
+  z-index: 2;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0%;
 
-    border-bottom: 1px solid #FFFFFF;
-    box-sizing: border-box;
-    transition: 0.6s ease;
+  border-bottom: 1px solid #ffffff;
+  box-sizing: border-box;
+  transition: 0.6s ease;
 }
 
 #primbotSTR {
-    position: relative;
-    width: 40%;
-    height: 50%;
-    top: -28%;
-    left: 20%;
+  position: relative;
+  width: 40%;
+  height: 50%;
+  top: -28%;
+  left: 20%;
 
-    font-family: "Suisse Int'l Condensed L";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 5.7vw;
-    line-height: 26px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.01em;
+  font-family: fonteLabel;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 5.7vw;
+  line-height: 26px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.01em;
 
-    color: #FFFFFF;
+  color: #ffffff;
 }
 
 #transdivsMINHASDIVIDAS {
-    position: relative;
-    z-index: 1;
-    height: 200%;
-    transition: 0.6s ease;
+  position: relative;
+  z-index: 1;
+  height: 200%;
+  transition: 0.6s ease;
 }
 
 #primbot {
-    z-index: 1;
-    position: relative;
-    width: 100%;
-    height: 50%;
-    left: 0px;
-    top: 0%;
+  z-index: 1;
+  position: relative;
+  width: 100%;
+  height: 50%;
+  left: 0px;
+  top: 0%;
 
-    background: #F08A6E;
-    border-bottom: 1px solid #FFFFFF;
-    box-sizing: border-box;
+  background: #f08a6e;
+  border-bottom: 1px solid #ffffff;
+  box-sizing: border-box;
 }
 
 .App-logo-pessoa {
-    /* Minhas Dividas Ícone */
+  /* Minhas Dividas Ícone */
 
-    position: relative;
-    left: 7%;
-    top: 25%;
-
+  position: relative;
+  left: 7%;
+  top: 25%;
 }
 
 .App-logo-UP {
-    /* Seta Baixo */
+  /* Seta Baixo */
 
-    position: relative;
-    left: 88%;
-    top: -70%;
-    transition: 0.6s ease;
+  position: relative;
+  left: 88%;
+  top: -70%;
+  transition: 0.6s ease;
 }
 
 /* ----money button ---- */
 .App-logo-Money {
-    position: relative;
-    left: 6.5%;
-    top: 25%;
+  position: relative;
+  left: 6.5%;
+  top: 25%;
 }
 
 #dividastotaisdiv {
-
-    position: relative;
-    width: 100%;
-    height: 8%;
-    left: 0px;
-    transform-origin: top;
-    transition: 0.6s ease;
-
+  position: relative;
+  width: 100%;
+  height: 8%;
+  left: 0px;
+  transform-origin: top;
+  transition: 0.6s ease;
 }
 
 #dividastotais {
-    background-color: #FCC17A;
-    z-index: 2;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: -100%;
-    border-bottom: 1px solid #FFFFFF;
-    box-sizing: border-box;
-    transition: 0.6s ease;
+  background-color: #fcc17a;
+  z-index: 2;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: -100%;
+  border-bottom: 1px solid #ffffff;
+  box-sizing: border-box;
+  transition: 0.6s ease;
 }
 /*anim*/
 #menu {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    transition: 0.6s ease;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  transition: 0.6s ease;
 }
 #menu-hidden {
-    top:0%;
-    margin-top: 0%;
+  top: 0%;
+  margin-top: 0%;
 }
 
 #botao {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: -100%;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: -100%;
 
-    background: #F08A6E;
-    border-bottom: 1px solid #FFFFFF;
-    box-sizing: border-box;
+  background: #f08a6e;
+  border-bottom: 1px solid #ffffff;
+  box-sizing: border-box;
 }
 
 .App-logo-UPBottom {
-    position: relative;
-    left: 88%;
-    top: -17%;
-    transition: 0.6s ease;
+  position: relative;
+  left: 88%;
+  top: -17%;
+  transition: 0.6s ease;
 }
 
 #subbotSTR {
-    position: relative;
-    width: 40%;
-    height: 50%;
-    top: 24%;
-    left: 20%;
+  position: relative;
+  width: 40%;
+  height: 50%;
+  top: 24%;
+  left: 20%;
 
-    font-family: "Suisse Int'l Condensed L";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 5.2vw;
-    line-height: 26px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.01em;
+  font-family: fonteLabel;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 5.2vw;
+  line-height: 26px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.01em;
 
-    color: #FFFFFF;
+  color: #ffffff;
 }
 
 #bottomBar {
-    position: absolute;
-    width: 100%;
-    left: 0px;
-    top: 92%;
-    height: 8%;
-    transition: 0.6s ease;
+  position: absolute;
+  width: 100%;
+  left: 0px;
+  top: 92%;
+  height: 8%;
+  transition: 0.6s ease;
 }
 
 #BottomPrimary {
-    z-index: 2;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0%;
-    background-color: #FCC17A;
-    border-top: 1px solid #FFFFFF;
-    box-sizing: border-box;
+  z-index: 2;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0%;
+  background-color: #fcc17a;
+  border-top: 1px solid #ffffff;
+  box-sizing: border-box;
 }
 
-
 #bottomBarSTR {
-    position: relative;
-    width: 40%;
-    height: 50%;
-    top: 24%;
-    left: 20%;
+  position: relative;
+  width: 40%;
+  height: 50%;
+  top: 24%;
+  left: 20%;
 
-    font-family: "Suisse Int'l Condensed L";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 5.7vw;
-    line-height: 26px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.01em;
+  font-family: fonteLabel;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 5.7vw;
+  line-height: 26px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.01em;
 
-    color: #FFFFFF;
+  color: #ffffff;
 }
 
 #BottomSec {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0%;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0%;
 
-    background: #F08A6E;
-    border-top: 1px solid #FFFFFF;
-    box-sizing: border-box;
-    transition: 0.6s;
+  background: #f08a6e;
+  border-top: 1px solid #ffffff;
+  box-sizing: border-box;
+  transition: 0.6s;
 }
-
 
 /* para remover de todos os Links*/
 a {
-    position: relative;
-    text-decoration: none;
-    margin-top: 0%;
+  position: relative;
+  text-decoration: none;
+  margin-top: 0%;
 }
