--- a/client/src/style/css/DividasTotais.css
+++ b/client/src/style/css/DividasTotais.css
@@ -18,7 +18,6 @@
 }
 .caixa {
   position: relative;
-  font-family: fontenormal;
   width: 80%;
 
   height: 29vh;
@@ -67,7 +66,7 @@
   text-align: center;
   align-items: center;
 
-  font-family: fontenormal;
+  font-family: fonteTitulo;
   font-style: normal;
   font-weight: 600;
   font-size: 175%;
@@ -96,6 +95,6 @@
   letter-spacing: 0.01em;
 }
 
-p {
+.p {
   margin-bottom: 40%;
 }
