--- a/client/src/style/css/Selects.css
+++ b/client/src/style/css/Selects.css
@@ -1,51 +1,58 @@
 @font-face {
-    font-family: "fonteLabel";
-    src: url(../font/SuisseIntlCond-Semibold-WebS.ttf);
+  font-family: fonteTitulo;
+  src: url(../font/SuisseIntlCond-Medium-WebS.woff);
 }
 
-.SelectDepartments label{
-    font-family: "fonteLabel";
-    font-weight: 550;
-    font-size: 14px;
-    display: flex;
-    color: #3E3C39;
-
-    margin-left: 8vh;
-    height: 3.5vh;
-    
+@font-face {
+  font-family: fonteLabel;
+  src: url(../font/SuisseIntlCond-Semibold-WebS.woff);
+}
+@font-face {
+  font-family: fontenormal;
+  src: url(../font/SuisseIntlCond-Thin-WebS.woff);
 }
 
-.SelectDepartments select{
-    width: 70vw;
-    height: 4vh;
-    margin-left: 12.5%;
-    padding-left: 2.5vh;
-    font-size: 12px;
-    display: flex;
-    letter-spacing: 0.01em;
-    background: #FFFFFF;
+.SelectDepartments label {
+  font-family: fonteLabel;
+  font-weight: 550;
+  font-size: 14px;
+  display: flex;
+  color: #3e3c39;
 
-    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-    border-radius: 30px;
-    border: #ffffff;
-    
-    color: #AEADAA;
+  margin-left: 8vh;
+  height: 3.5vh;
 }
 
+.SelectDepartments select {
+  width: 70vw;
+  height: 4vh;
+  margin-left: 12.5%;
+  padding-left: 2.5vh;
+  font-size: 12px;
+  display: flex;
+  letter-spacing: 0.01em;
+  background: #ffffff;
 
-.SelectDepartments select option{
-    width: 30vh;
-    height: 4vh;
-    font-size: 12px;
-    line-height: 16px;
-    align-items: center;
-    display: flex;
-    letter-spacing: 0.01em;
-    background: #FFFFFF;
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
+  border-radius: 30px;
+  border: #ffffff;
 
-    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-    border-radius: 30px;
-    border: #ffffff;
+  color: #aeadaa;
+}
 
-    color: #3E3C39;
+.SelectDepartments select option {
+  width: 30vh;
+  height: 4vh;
+  font-size: 12px;
+  line-height: 16px;
+  align-items: center;
+  display: flex;
+  letter-spacing: 0.01em;
+  background: #ffffff;
+
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
+  border-radius: 30px;
+  border: #ffffff;
+
+  color: #3e3c39;
 }
