--- a/client/src/style/css/HomePage.css
+++ b/client/src/style/css/HomePage.css
@@ -7,6 +7,7 @@
   src: url(../font/SuisseIntlCond-Semibold-WebS.woff);
 }
 
+
 /* -------------- Front Page -------------------*/
 #Background {
   /* background */
@@ -14,8 +15,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  left: 0px;
-  top: 0px;
+  overflow: hidden;
 
   background: radial-gradient(179.64% 179.64% at 50% 50%, #FCC582 0%, #F08A6E 100%);
 }
@@ -36,9 +36,7 @@
 
   filter: drop-shadow(4px 4px 25px rgba(0, 0, 0, 0.1));
 }
-.buttons {
-  margin: 0;
-}
+
 #btns {
   position: relative;
   top: 65vh;
