--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -20,17 +20,18 @@ html {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+  width: 70%;
 }
 
-h1 {
+.criar-divida-titulo h1 {
   margin-top: 0;
-  margin-bottom: 10%;
+  left: 50%;
 }
 
 .dividasshow {
   position: absolute;
   width: 100%;
-  height: 200%;
+  height: fit-content + 50%;
 }
 
 .Ppagar {
@@ -38,7 +39,7 @@ h1 {
   width: 70%;
   height: 4vh;
   left: 16.25%;
-  margin-top: 2.5vh;
+  margin-top: 5vh;
 
   font-family: fonteLabel;
   font-size: 3.5vw;
@@ -169,4 +170,11 @@ h1 {
   border: none;
   box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
   border-radius: 30px;
+}
+
+@media (min-width: 961px) {
+  .sidebar-mobile {
+    display: block;
+    width: 20%;
+  }
 }
