Revert "minor css teaks, Mobile-Desktop Redirects, fixed some redirects"
This reverts commit d92f08b3907a5a85a6f647ec4334acb343d53c56.

--- a/client/src/style/css/Buttons.css
+++ b/client/src/style/css/Buttons.css
@@ -1,3 +1,4 @@
+
 @font-face {
   font-family: fonteLabel;
   src: url(../font/SuisseIntlCond-Semibold-WebS.woff);
@@ -28,11 +29,11 @@
   color: #f08a6e;
 }
 
-.RegistarStr {
+.RegistarStr{
   right: 13.5vh;
   width: 57%;
-  background: #f08a6e;
-  color: #ffffff;
+  background: #F08A6E;
+  color: #FFFFFF;
 }
 
 @media (min-width: 500px) and (max-width: 650px) {
