--- a/client/src/style/css/HomePage.css
+++ b/client/src/style/css/HomePage.css
@@ -1,3 +1,7 @@
+/*.App {
+  text-align: center;
+}*/
+
 @font-face {
   font-family: fonteTitulo;
   src: url(../font/SuisseIntlCond-Medium-WebS.woff);
@@ -12,119 +16,48 @@
   src: url(../font/SuisseIntlCond-Thin-WebS.woff);
 }
 
-@media (min-width: 931px) {
-  #Background {
-    /* background */
 
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+/* -------------- Front Page -------------------*/
+#Background {
+  /* background */
 
-    background: radial-gradient(
-      179.64% 179.64% at 50% 50%,
-      #fcc582 0%,
-      #f08a6e 100%
-    );
-  }
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 
-  .App-logo-mainmenu {
-    /* logo*/
-    position: relative;
-    width: 50%;
-    height: auto;
-    left: 0%;
-    top: 30%;
-    display: block;
-    margin: auto;
-    /* sombra base */
-    filter: drop-shadow(4px 4px 25px rgba(0, 0, 0, 0.1));
-  }
-  .buttons {
-    position: relative;
-    top: -65%;
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    left: 0%;
-    height: 0%;
-    margin-top: 0%;
-  }
-  #btns {
-    position: relative;
-    top: 40%;
-    height: 70%;
-    display: flex;
-    width: 100%;
-    left: 0%;
-  }
-  #btns a {
-    width: 18%; /* esta aqui */
-    top: 0%;
-    height: 10%;
-    left: 32%; /* 50 - width */
-    /*importante*/
-  }
-  .button {
-    position: relative;
-    left: 0%;
-    width: 100%;
-  }
+  background: radial-gradient(
+    179.64% 179.64% at 50% 50%,
+    #fcc582 0%,
+    #f08a6e 100%
+  );
 }
 
-/* -------------- MOBILE -------------------*/
-@media (max-width: 930px) {
-  #Background {
-    /* background */
+.App-logo-mainmenu {
+  /* logo*/
+  position: relative;
+  width: 85%;
+  height: auto;
+  left: 43%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  top: 40%;
+  display: block;
+  margin: auto;
+  /* sombra base */
 
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+  filter: drop-shadow(4px 4px 25px rgba(0, 0, 0, 0.1));
+}
 
-    background: radial-gradient(
-      179.64% 179.64% at 50% 50%,
-      #fcc582 0%,
-      #f08a6e 100%
-    );
-  }
-
-  .App-logo-mainmenu {
-    /* logo*/
-    position: relative;
-    width: 70%;
-    height: auto;
-    left: 0%;
-    top: 40%;
-    display: block;
-    margin: auto;
-    /* sombra base */
-    filter: drop-shadow(4px 4px 25px rgba(0, 0, 0, 0.1));
-
-    user-select: none; /* supported by Chrome and Opera */
-    -webkit-user-select: none; /* Safari */
-    -khtml-user-select: none; /* Konqueror HTML */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-  }
-
-  #btns {
-    position: relative;
-    top: 60%;
-    height: 50%;
-    display: flex;
-    width: 100%;
-    left: 0%;
-  }
-  .button {
-    position: relative;
-    width: 100%;
-  }
-
-  #btns a {
-    width: 100%;
-    top: 0%;
-    height: 10%;
-    left: 5%;
-  }
+#btns {
+  position: relative;
+  top: 65vh;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+#btns a {
+  width: 100%;
+  /*importante*/
 }
