--- a/client/src/style/css/Sidebar.css
+++ b/client/src/style/css/Sidebar.css
@@ -79,19 +79,19 @@
 }
 
 #mydividas {
-    background-color: #FCC17A;
-    z-index: 2;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0%;
-    
-    border-bottom: 1px solid #FFFFFF;
-    box-sizing: border-box;
-    transition: 0.6s ease;
+  background-color: #fcc17a;
+  z-index: 2;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0%;
 
-    cursor: pointer;
+  border-bottom: 1px solid #ffffff;
+  box-sizing: border-box;
+  transition: 0.6s ease;
+
+  cursor: pointer;
 }
 
 #primbotSTR {
@@ -142,12 +142,12 @@
 }
 
 .App-logo-UP {
-    /* Seta Baixo */
+  /* Seta Baixo */
 
-    position: relative;
-    left: 88%;
-    top: -70%;
-    transition: 0.6s ease;
+  position: relative;
+  left: 88%;
+  top: -60%;
+  transition: 0.6s ease;
 }
 
 /* ----money button ---- */
@@ -167,18 +167,18 @@
 }
 
 #dividastotais {
-    background-color: #FCC17A;
-    z-index: 2;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: -100%;
-    border-bottom: 1px solid #FFFFFF;
-    box-sizing: border-box;
-    transition: 0.6s ease;
+  background-color: #fcc17a;
+  z-index: 2;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: -100%;
+  border-bottom: 1px solid #ffffff;
+  box-sizing: border-box;
+  transition: 0.6s ease;
 
-    cursor: pointer;
+  cursor: pointer;
 }
 /*anim*/
 #menu {
@@ -206,11 +206,10 @@
 }
 
 .App-logo-UPBottom {
-    position: relative;
-    left: 88%;
-    top: -17%;
-    transition: 0.6s ease;
-
+  position: relative;
+  left: 88%;
+  top: -14%;
+  transition: 0.6s ease;
 }
 
 #subbotSTR {
@@ -218,7 +217,7 @@
   width: 40%;
   height: 50%;
   top: 24%;
-  left: 20%;
+  left: 20.5%;
 
   font-family: fonteLabel;
   font-style: normal;
@@ -242,24 +241,24 @@
 }
 
 #BottomPrimary {
-    z-index: 2;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0%;
-    background-color: #FCC17A;
-    border-top: 1px solid #FFFFFF;
-    box-sizing: border-box;
+  z-index: 2;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0%;
+  background-color: #fcc17a;
+  border-top: 1px solid #ffffff;
+  box-sizing: border-box;
 
-    cursor: pointer;
+  cursor: pointer;
 }
 
 #bottomBarSTR {
   position: relative;
   width: 40%;
   height: 50%;
-  top: 24%;
+  top: 20%;
   left: 20%;
 
   font-family: fonteLabel;
@@ -306,7 +305,7 @@ a {
     width: 100%;
     height: 50%;
     top: -23%;
-    left: 20%;
+    left: 24%;
 
     font-size: 2.5vh;
   }
@@ -316,7 +315,7 @@ a {
     width: 100%;
     height: 50%;
     top: 24%;
-    left: 20%;
+    left: 23%;
 
     font-size: 2.5vh;
   }
@@ -325,8 +324,8 @@ a {
     position: relative;
     width: 100%;
     height: 50%;
-    top: 24%;
-    left: 20%;
+    top: 22%;
+    left: 15%;
 
     font-size: 2.5vh;
   }
