--- a/client/src/style/css/Sidebar.css
+++ b/client/src/style/css/Sidebar.css
@@ -11,7 +11,9 @@
   font-family: fontenormal;
   src: url(../font/SuisseIntlCond-Thin-WebS.woff);
 }
-
+.sidebarTopBarCOLOR {
+  z-index: 2;
+}
 /* btn press magic */
 #mydividas:active {
   background-color: #fdaa44;
@@ -146,7 +148,7 @@
 
   position: relative;
   left: 88%;
-  top: -60%;
+  top: -65%;
   transition: 0.6s ease;
 }
 
@@ -208,7 +210,7 @@
 .App-logo-UPBottom {
   position: relative;
   left: 88%;
-  top: -14%;
+  top: -19%;
   transition: 0.6s ease;
 }
 
