Scallable css homepage.

--- a/client/src/style/css/HomePage.css
+++ b/client/src/style/css/HomePage.css
@@ -17,52 +17,8 @@
 }
 
 /* -------------- Front Page -------------------*/
-@media (max-width: 960px) {
-  #Background {
-    /* background */
 
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-
-    background: radial-gradient(
-      179.64% 179.64% at 50% 50%,
-      #fcc582 0%,
-      #f08a6e 100%
-    );
-  }
-
-  .App-logo-mainmenu {
-    /* logo*/
-    position: relative;
-    width: 85%;
-    height: auto;
-    left: 43%;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-    top: 40%;
-    display: block;
-    margin: auto;
-    /* sombra base */
-
-    filter: drop-shadow(4px 4px 25px rgba(0, 0, 0, 0.1));
-  }
-
-  #btns {
-    position: relative;
-    top: 65vh;
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-  }
-  #btns a {
-    width: 100%;
-    /*importante*/
-  }
-}
-@media (min-width: 961px) {
+@media (min-width: 601px) {
   #Background {
     /* background */
 
@@ -115,5 +71,119 @@
     width: 15%; /* mudar a width aqui */
     height: 100%;
     left: 35.8%;
+  }
+}
+
+@media (min-width: 400px) and (max-width: 700px) {
+  #Background {
+    /* background */
+
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    background: radial-gradient(
+      179.64% 179.64% at 50% 50%,
+      #fcc582 0%,
+      #f08a6e 100%
+    );
+  }
+
+  .App-logo-mainmenu {
+    /* logo*/
+    position: relative;
+    width: 70%;
+    height: auto;
+    left: 0%;
+    top: 40%;
+    display: block;
+    margin: auto;
+    /* sombra base */
+
+    filter: drop-shadow(4px 4px 25px rgba(0, 0, 0, 0.1));
+  }
+
+  #btns {
+    position: relative;
+    top: 60%;
+    display: inline-flex;
+    width: 100%;
+  }
+  .button {
+    margin-left: 0vw !important;
+    left: 39.5% !important;
+    width: 70% !important;
+  }
+
+  .buttons {
+    left: 60% !important;
+    width: 100%; /*importante */
+    height: 60% !important;
+    top: 0%;
+  }
+
+  #btns a {
+    width: 40%; /* mudar a width aqui */
+    height: 100%;
+    left: 0%;
+  }
+}
+@media (min-width: 0px) and (max-width: 400px) {
+  #Background {
+    /* background */
+
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    background: radial-gradient(
+      179.64% 179.64% at 50% 50%,
+      #fcc582 0%,
+      #f08a6e 100%
+    );
+  }
+
+  .App-logo-mainmenu {
+    /* logo*/
+    position: relative;
+    width: 85%;
+    height: auto;
+    left: 43%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    top: 40%;
+    display: block;
+    margin: auto;
+    /* sombra base */
+
+    filter: drop-shadow(4px 4px 25px rgba(0, 0, 0, 0.1));
+  }
+
+  #btns {
+    position: relative;
+    top: 65vh;
+    display: inline-flex;
+    width: 100%;
+  }
+  .button {
+    margin-left: 0vw !important;
+    left: 16% !important;
+    width: 70% !important;
+  }
+
+  .buttons {
+    left: 50% !important;
+    width: 100%; /*importante */
+    height: 60% !important;
+    top: 0%;
+  }
+
+  #btns a {
+    width: 50%; /* mudar a width aqui */
+    height: 100%;
+    left: 0%;
   }
 }
