--- a/client/src/style/css/Selects.css
+++ b/client/src/style/css/Selects.css
@@ -21,7 +21,7 @@
   outline: none;
   color: #3E3C39;
 
-  left: 16%;
+  left: 17%;
   height: 3.5vh;
   width: 70%;
 }
@@ -30,7 +30,7 @@
   position: relative;
   width: 72%;
   height: 4vh;
-  left: 12.5%;
+  left: 14%;
   padding-left: 4vw;
   font-size: 2vh;
   letter-spacing: 0.01em;
@@ -44,10 +44,9 @@
 }
 
 .SelectDepartments select option {
-  width: 30vh;
+  width: 100%;
   height: 4vh;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 1.5vh;
   align-items: center;
   display: flex;
   letter-spacing: 0.01em;
