--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -16,10 +16,11 @@ html {
   width: 100%;
   height: 100%;
 }
-.criar-divida-titulo {
+.criar-divida-tituloDSC {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+  top: 5%;
 }
 
 h1 {
