--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -16,11 +16,20 @@ html {
   width: 100%;
   height: 100%;
 }
+
 .criar-divida-tituloDSC {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  top: 5%;
+  position: relative;
+  height: 5vh;
+  top: 1.15vh;
+  font-family: fonteTitulo;
+  font-weight: bold;
+  font-size: 2vh;
+  text-align: center;
+  letter-spacing: 0.01em;
+  color: #3e3c39;
 }
 
 h1 {
