--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -157,16 +157,16 @@ h1 {
 }
 
 .div-button {
-  margin-top: 40%;
-  margin-left: 35%;
+  margin-left: 22%;
 }
 
 .pay-button {
-  width: 40%;
-  height: 3.5vh;
+  width: 35%;
+  height: 3.8vh;
   background: #f08a6e;
   /* sombra base */
   border: none;
   box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
   border-radius: 30px;
+  color: #ffffff;
 }
