--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -180,3 +180,16 @@ h1 {
   border-radius: 30px;
   color: #ffffff;
 }
+
+.not-dividas-create {
+  font-family: fonteLabel;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.01em;
+  font-size: 5vw;
+  color: #3e3c39;
+  margin-top: 15%;
+  /* sombra base */
+
+  text-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
+}
