--- a/client/src/style/css/Signup.css
+++ b/client/src/style/css/Signup.css
@@ -7,10 +7,6 @@
   font-family: fonteLabel;
   src: url(../font/SuisseIntlCond-Semibold-WebS.woff);
 }
-@font-face {
-  font-family: fontenormal;
-  src: url(../font/SuisseIntlCond-Thin-WebS.woff);
-}
 
 .signuppage {
   width: 100%;
@@ -56,43 +52,20 @@
   width: 100%;
 }
 
-.name-lastname-name label {
-  position: relative;
-  font-family: fonteLabel;
-  font-weight: 550;
-  font-size: 2.1vh;
-  display: flex;
-  outline: none;
-  color: #3E3C39;
-
-  margin-left: 35%;
-  height: 3.5vh;
-  width: 70%;
-}
-
-.name-lastname-name input {
-  position: relative;
-  width: 60%;
-  height: 4vh;
-  margin-left: 30%;
-  padding-left: 4vw;
-  font-size: 2vh;
-  letter-spacing: 0.01em;
-  background: #FFFFFF;
-  outline: none;
-
-  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-  border-radius: 30px;
-  border: #FFFFFF;
-  color: #AEADAA;
-}
-
 .name-lastname-lastname {
   margin-left: 4vw;
   width: 100%;
 }
 
+.name-lastname-name label {
+  margin-left: 35%;
+}
+
 .name-lastname-lastname label {
+  margin-left: 3vw;
+}
+
+.name-lastname-name label, .name-lastname-lastname label {
   position: relative;
   font-family: fonteLabel;
   font-weight: 550;
@@ -101,12 +74,15 @@
   outline: none;
   color: #3E3C39;
 
-  margin-left: 3vw;
   height: 3.5vh;
   width: 70%;
 }
 
-.name-lastname-lastname input {
+.name-lastname-name input {
+  margin-left: 30%;
+}
+
+.name-lastname-name input, .name-lastname-lastname input {
   position: relative;
   width: 60%;
   height: 4vh;
@@ -121,6 +97,7 @@
   border: #FFFFFF;
   color: #AEADAA;
 }
+
 
 .email1,
 .password1,
@@ -147,6 +124,14 @@
   }
 
   .name-lastname-name input {
+    margin-left: 30%;
+  }
+
+  .name-lastname-lastname input {
+    margin-left: -4vw;
+  }
+
+  .name-lastname-name input, .name-lastname-lastname input {
     width: 58%;
     height: 6vh;
     margin-left: 30%;
@@ -156,14 +141,6 @@
   .name-lastname-lastname label {
     margin-left: -3vw;
   }
-
-  .name-lastname-lastname input {
-    width: 58%;
-    height: 6vh;
-    margin-left: -4vw;
-    padding-left: 1.6vw;
-  }
-
 
   .email1,
   .password1,
