--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -188,7 +188,7 @@ h1 {
   letter-spacing: 0.01em;
   font-size: 5vw;
   color: #3e3c39;
-  margin-top: 15%;
+  margin-top: 800px;
   /* sombra base */
 
   text-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
